# hello-zngur

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
cpp/: CMakeLists.txt  main.cpp
cpp/include/types/: conversion_core.hpp  result.hpp  string.hpp  tuple.hpp  vec.hpp
cpp/tests/: CMakeLists.txt
cpp/tests/abstractions/: crates.cpp  traits.cpp
cpp/tests/types/: result.cpp  string.cpp  vec.cpp
rust/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
rust/src/: abstractions.rs  lib.rs  types.rs
rust/src/abstractions/: crates.rs  traits.rs
rust/src/types/: result.rs  string.rs  vec.rs
rust/zng/: abstractions.zng  lib.zng  types.zng
rust/zng/abstractions/: crates.zng  traits.zng
rust/zng/types/: base.zng  result.zng  string.zng  vec.zng
